traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:20: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:23: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:26: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:29: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:32: error: Unmatched closing brace '}' ignored here
}
^